--- a/pom.xml
+++ b/pom.xml
@@ -1026,6 +1026,7 @@
                 <dependency>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-starter-undertow</artifactId>
+                    <scope>provided</scope>
                 </dependency>
             </dependencies>
             <build>
